# advent-of-code

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
day1/: process.py  test.py
day10/: process.py  test.py
day11/: test.py
day2/: test.py
day3/: process.py  test.py
day4/: passport_validation.py  process.py  test.py
day5/: test.py
day6/: test.py
day7/: process.py  test.py
day8/: test.py
day9/: test.py
day_01/: process.py  test.py
day_02/: process.py  test.py
day_03/: test.py
day_04/: test.py
day_05/: process.py  test.py
day_06/: process.py  test_process.py
day_07/: test.py
day_08/: test_process.py
day_09/: process.py  test.py
day_10/: test.py
day_11/: test_process.py
day_12/: process.py  test_process.py
day_13/: process.py  test.py
day_14/: test_process.py
day_15/: test.py
day_16/: test.py
day_17/: process.py  test.py
day_18/: test.py  test2.py  test_lark.py  test_process.py
day_19/: process.py  test.py
day_20/: process.py  test.py
day_21/: process.py  test.py
day_22/: process.py  test.py
day_23/: process2.py  test2.py  test_process.py
day_24/: test_process.py
day_25/: test_process.py
src/advent_of_code/: common.py
tests/: test_common.py
year_2023/day_01/: process.py  test.py
year_2023/day_02/: test_process.py
year_2023/day_03/: process.py  test_process.py
year_2023/day_04/: process.py
year_2023/day_05/: process.py
year_2023/day_06/: process.py  test_process.py
year_2023/day_07/: process.py  test_process.py
year_2023/day_08/: process.py  test_process.py
year_2023/day_09/: process.py  test_process.py
year_2023/day_10/: process.py  (+1 more)
(+549 files in other folders)
